# tomocupy

./: .gitignore  .loglogin  .readthedocs.yml  CMakeLists.txt  LICENSE  MANIFEST.in  MANIFEST.txt  README  README.md  README.rst  VERSION  pyproject.toml  requirements.txt  setup.py  tomocupy_cor.yml
.licenses/: license.c  license.py
_skbuild/linux-x86_64-3.9/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/linux-x86_64-3.9/cmake-build/src/: cmake_install.cmake
_skbuild/linux-x86_64-3.9/cmake-build/src/cuda/: cfunc_fourierrec.py  cmake_install.cmake
_skbuild/linux-x86_64-3.9/cmake-install/src/tomocupy_cli/: cfunc_fourierrecfp16.py
_skbuild/linux-x86_64-3.9/setuptools/lib.linux-x86_64-3.9/tomocupy_cli/: config.py
_skbuild/linux-x86_64-3.9/setuptools/lib.linux-x86_64-3.9/tomocupy_cli/fourierrec/: fourierrec.py
docs/: conf.py  index.rst
docs/demo/: __init__.py  readrec_aps.py
docs/source/: api.rst  conf.py  credits.rst  index.rst  install.rst  performance.rst  tested_gpus.rst  usage.rst
docs/source/api/: tomocupy.find_center.rst  tomocupy.rec.rst  tomocupy.rec_steps.rst  tomocupy.remove_stripe.rst  tomocupy.retrieve_phase.rst  tomocupy_cli.config.rst  tomocupy_cli.find_rotation.rst  tomocupy_cli.lprec.lprec.rst  tomocupy_cli.rec.rst  tomocupy_cli.rec_steps.rst  tomocupy_cli.remove_stripe.rst  tomocupy_cli.retrieve_phase.rst
docs/source/bibtex/: cite.bib  ref.bib
recipe/: meta.yaml  readme
src/: CMakeLists.txt
src/cuda/: CMakeLists.txt  cfunc.cu  cfunc.i  cfunc_fft2d.cu  cfunc_fft2d.i  cfunc_filter.cu  cfunc_filter.i  cfunc_filterfp16.i  cfunc_fourierrec.cu  cfunc_fourierrec.i  cfunc_fourierrecfp16.i  cfunc_linerec.cu  cfunc_linerec.i  cfunc_linerecfp16.i  cfunc_lprec.cu  cfunc_lprec.i  cfunc_lprecfp16.i  cfunc_usfft1d.cu  cfunc_usfft1d.i  cfunc_usfft2d.cu  cfunc_usfft2d.i
src/h5gpurec/: __init__.py  cfunc_fourierrec.py  config.py  logging.py  remove_stripe.py  retrieve_phase.py  solver.py  utils.py
src/h5gpurec/lprec/: __init__.py  lprec.py
src/h5lprec/: __init__.py  initsgl.py  solver.py  utils.py
src/include/: cfunc.cuh  cfunc_fft2d.cuh  cfunc_filter.cuh  cfunc_fourierrec.cuh  cfunc_linerec.cuh  cfunc_lprec.cuh  cfunc_usfft1d.cuh  cfunc_usfft2d.cuh  defs.cuh  kernels.cuh  kernels_fft2d.cu  kernels_filter.cuh  kernels_fourierrec.cuh  kernels_linerec.cuh  kernels_lprec.cuh  kernels_usfft1d.cu  kernels_usfft2d.cu  math_operators.cuh  math_operators_lprec.cuh
src/lprec/: __init__.py  cfunc.py  initsadj.py  initsgl.py  solver.py  timing.py  utils.py
src/tomocupy/: __init__.py  __main__.py  adjust_projections.py  backproj_functions.py  backproj_lamfourier_parallel.py  backproj_parallel.py  cfunc_filterfp16.py  cfunc_fourierrec.py  cfunc_fourierrecfp16.py  cfunc_linerec.py  cfunc_linerecfp16.py  cfunc_lprecfp16.py  conf_filepars.py  conf_io.py  conf_sizes.py  config.py  config_sizes.py  fbp_filter.py  find_center.py  fourierrec.py  global_vars.py  hardening.py  line_summation.py  linerec.py  log_local.py  logging.py  lprec.py  proc.py  proc_functions.py  reader.py  rec.py  rec_steps.py  remove_stripe.py  retrieve_phase.py  tomo_functions.py  utils.py  writer.py
src/tomocupy/ai/: inference.py  model_archs.py
src/tomocupy/dataio/: reader.py  writer.py
src/tomocupy/processing/: __init__.py  proc_functions.py  remove_stripe.py  retrieve_phase.py
src/tomocupy/reconstruction/: backproj_functions.py  backproj_lamfourier_parallel.py  backproj_parallel.py  fbp_filter.py  fourierrec.py  lamfourier.py  lamfourierrec.py  linerec.py  lprec.py
src/tomocupy_cli/: __init__.py  cfunc_filter.py  cfunc_fourierrec.py  cfunc_lprec.py  cfunc_lprec.py.py  conf_io.py  config.py  confio.py  find_center.py  find_rotation.py  fourierrec.py  line_summation.py  logging.py  rec.py  rec_steps.py  remove_stripe.py  retrieve_phase.py  tomo_functions.py  utils.py
src/tomocupy_cli/fbp/: __init__.py  backprojection.py
src/tomocupy_cli/fbp_filter/: __init__.py  fbp_filter.py
src/tomocupy_cli/fourierrec/: __init__.py  fourierrec.py
src/tomocupy_cli/lprec/: __init__.py  lprec.py
src/tomocupyfp16_cli/: cfunc_fourierrec.py  config.py  find_rotation.py  rec.py  rec_steps.py  remove_stripe.py  retrieve_phase.py  utils.py
src/tomocupyfp16_cli/fourierrec/: fourierrec.py
tests/: prec.py  proc.py  replace.py  run.sh  run_test.sh  take_norm.py  test_all.py  test_all.sh  test_file.py  test_file2.py  test_full.py  test_hdf5_read.py  test_init.py  test_steps_full.py  test_steps_try.py  test_syn.py  test_try.py
tests/bq/: proc.py  test.cu  test_double_fov.py  test_file.py  test_file2.py  test_hdf5.py
tests/bq/data/: R  Rfoam  f  fbub
tests/brain/: bin.py  brain_lamino  shift_h.txt  shift_v.txt  sum.py
tests/data/: test_imports_out.txt
tests/perf/: find_coeff.py  form_data.py  form_table.py  run.sh  run2.sh  run3.sh  run_line.sh  run_slow.sh
tests/visualization/: plot.py  plot_diff_lprec_fourierrec.py  plot_diff_to_tomopy.py  plot_fourier.py  plot_lprec.py  run.sh
tests/visualization2/: plot_diff_lprec_fourierrec.py
tests/work/bq/: prec.py  rec_seq.py  rec_steps copy.py  run_test.sh  test2.cu  test_init.py  test_parallel_io.py  test_perf.py  test_syn.py
tests/work/bq/data/: Rbub
tests/work/lamino/: plot_brain.py
tests/work/perf/: check_sums.py  form_data.py  form_data_31MP.py  form_data_lam.py  form_table.py  run.sh  run_lam.sh  run_slow.sh
tests/work/visualization/: plot_fourier.py  replace.py  run.sh
tests/work/visualization2/: plot_diff_sum_fourierrec.py  plot_diff_to_lprec_linerec.py  plot_diff_to_tomopy.py  plot_fourier.py  plot_linerec.py  plot_lprec.py  run.sh  zoom_data.py
tests/work/visualization_gh/: plot_state_change.py  run.sh
tomocupy_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tomocupyfp16_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
